added flying emoji

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 
 <body>
+    <!-- <div class="flier">
+        <div>
+            (✿◠‿◠)
+        </div>
+    </div> -->
+    <!-- <div class="flier">
+        <div>
+            (ﾉ◕ヮ◕)ﾉ*:・ﾟ✧
+        </div>
+    </div> -->
+    <div class="flier">
+        <div style="font-size:4em">
+            🌞
+        </div>
+    </div>
+
     <div class="container">
         
         <section class="header">
