--- a/index.html
+++ b/index.html
@@ -73,47 +73,55 @@
             </p>
 
             <p>
-                <div>
+                <ul>
                     Software resources:
-                </div>
-                <div>
-                    <a href="https://edex.adobe.com/nycschools">Free Adobe Creative Cloud for students</a>
-                </div>
+                    <li>
+                        <a href="https://edex.adobe.com/nycschools">Free Adobe Creative Cloud for students</a>
+                    </li>
+                </ul>
             </p>
 
             <p>
-                <div class="sub">
-                    <div>
-                        Image resources:
-                    </div>
-                    <div>
+                <ul>
+                    Image resources:
+                    <li>
+                        You can always make your own images using a camera, scanner, or other method!
+                    </li>
+                    <li>
+                        But, when you do choose to use existing imagery, avoid working with images created by well-known artists — such references can overshadow
+                        your own design.
+                    </li>
+                    <li>
+                        Books and ephemera (scans or photographs) in Cooper Union’s library (may not be ideal as hours are 9AM-5PM)
+                    </li>
+                    <li>
                         <a href="https://www.flickr.com/commons">Flickr Commons</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://commons.wikimedia.org/wiki/Main_Page">Wikimedia Commons</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://digitalcollections.nypl.org/">New York Public Library Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://web.library.yale.edu/digital-collections">Yale Library Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://library.harvard.edu/digital-collections">Harvard Library Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="http://dla.library.upenn.edu/dla/archives/index.html">Upenn Library Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.loc.gov/collections/">Library of Congress Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.si.edu/collections">Smithsonian Digital Collections</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.britishmuseum.org/collection">British Museum Digital Collection</a>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </p>
 
             <p>
@@ -229,14 +237,19 @@
                             </ul>
                             <ul>Homework: Start poster series project about your chosen subject
                                 <li>
-                                    Begin research, both informational and visual, and start to collect images and text you would like to use.
+                                    Begin visual research, start to write text and collect images and typefaces you would like to use.
+                                </li>
+                                <li>
+                                    You may find the type and image resources linked at the top of this page helpful!
                                 </li>
                                 <li>
                                     Start sketching ideas: aim for 5 sketches total (2 for the all-type poster, and 3 for the image+type poster). In each direction, try
                                     to make each idea as different from the others as possible.
                                 </li>
                                 <li>
-                                    As you sketch, you may find the type and image resources linked at the top of this page helpful!
+                                    Think about how to represent the information about your event graphically… How can typography convey your theme? What
+                                    does color have to do with it? If using images, where do they come from? Why? How does composition work? And what does
+                                    it have to do with the event?
                                 </li>
                             </ul>
                         </div>
@@ -249,15 +262,6 @@
                             </div>
                             <ul>
                                 In class: Continuation of poster series project, finish up sketching posters.
-                                <li>
-                                    (Continued from homework) Sketch out 2 ideas for the all-type poster, and 3 for the image+type poster. In each direction, try
-                                    to make each idea as different from the others as possible.
-                                </li>
-                                <li>
-                                    Think about how to represent the information about your event graphically… How can typography convey your theme? What
-                                    does color have to do with it? If using images, where do they come from? Why? How does composition work? And what does
-                                    it have to do with the event?
-                                </li>
                             </ul>
                             <div class="sub">
                                 Collage exercise: translate your sketches into physical collage. Print out images and text, collage elements together on
