update with pdf links, etc.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 Class sessions will be structured around group critiques and informal presentations, with occasional guest critics.
             </p>
 
+            <hr>
+
+            <p>
+                Please request to join the class <a href="https://www.pinterest.com/iriseel/type-in-the-world/">Pinterest channel</a> for the <i>Type in the World</i> mini-project, and then start adding your pins! (If you don't have a pinterest account yet, please register for one first.)
+            </p>
+
             <p>
                 <ul>
                     Software resources:
@@ -125,32 +131,41 @@
             </p>
 
             <p>
-                <div class="sub">
-                    <div>
-                        Type resources:
-                    </div>
-                    <div>
+                <ul>
+                    Type resources:
+                    <li>
                         <a href="https://fontsinuse.com/">Fonts in Use</a> (a great reference for seeing how other designers use fonts)
-                    </div>
-                    <div>
+                    </li>
+                    <li>
+                        <a href="https://www.myfonts.com/pages/whatthefont">What the Font</a> (tool for identifying fonts out in the wild — just take a photo / screenshot and upload to the site)
+                    </li>
+                    <li>
                         <a href="http://fonts.google.com/">Google fonts</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://fonts.adobe.com/collections">Adobe fonts</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://pangrampangram.com/collections/fonts">Trial fonts by Pangram Pangram</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.theleagueofmoveabletype.com/">Open-source font foundry</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.design-research.be/by-womxn/">Libre Fonts by womxn designers</a>
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                         <a href="https://www.collletttivo.it/">Open-source type foundry</a>
-                    </div>
-                </div>
+                    </li>
+                </ul>
+            </p>
+
+            <p>
+                <ul>
+                    In-class presentations:
+                    <li><a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a></li>
+                    <li><a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for Posters</a></li>
+                </ul>
             </p>
         </section>
 
@@ -227,7 +242,7 @@
                                 <li>
                                     While you’re out and about, take note of interesting, attractive, ugly, or otherwise notable typography in your
                                     environment (this can be signage, packaging, stickers, etc.). If possible, bring the object into class, but if not, take
-                                    pictures and upload them to our class Are.na / Pinterest channel. We’ll periodically do a “show-and-tell” of our
+                                    pictures and upload them to our class <a href="https://www.pinterest.com/iriseel/type-in-the-world/">Pinterest channel</a>. We’ll periodically do a “show-and-tell” of our
                                     selections at the start of class.
                                 </li>
                                 <li>
@@ -264,7 +279,7 @@
                                 In class: Continuation of poster series project, finish up sketching posters.
                             </ul>
                             <div class="sub">
-                                Collage exercise: translate your sketches into physical collage. Print out images and text, collage elements together on
+                                Collage exercise: translate 3 of your sketches into physical collage. Print out images and text, collage elements together on
                                 large poster paper using glue/tape.
                             </div>
                             <div class="sub">
@@ -305,7 +320,7 @@
                                     either in a followup Photoshop workshop or in 1-on-1s.
                                 </li>
                                 <li>
-                                    By noon Sunday, send your poster files to Emily so that she can print and trim them for our class on Monday.
+                                    By midnight Sunday, send your poster files to Emily so that she can print and trim them for our class on Monday.
                                 </li>
                             </ul>
                         </div>
@@ -388,7 +403,7 @@
                             flowers, chewed gum, fruit peels, dried pasta – anything goes!)
                         </div>
                         <div class="sub">
-                            Use <a href="https://www.calligraphr.com/en/">calligraphr</a> to generate into usable font file.
+                            Use <a href="https://www.calligraphr.com/en/">calligraphr</a> / Illustrator to generate into usable font file.
                         </div>
                         <div class="sub">
                             End goal: Make a 24”x36” type specimen poster using the typeface.
@@ -443,7 +458,7 @@
                         <ul>
                             Homework: Finish typeface development, finalize all basic letterforms.
                             <li>
-                                By 8PM tonight, send your typefaces and wip type specimen posters to Emily so that she can print and trim them for our class tomorrow.
+                                By midnight tonight, send your typefaces and wip type specimen posters to Emily so that she can print and trim them for our class tomorrow.
                             </li>
                         </ul>
                     </div>
