added extra smithsonian library

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                         <a href="https://www.si.edu/collections">Smithsonian Digital Collections</a>
                     </li>
                     <li>
+                        <a href="https://library.si.edu/image-gallery">Smithsonian Image Gallery</a>
+                    </li>
+                    <li>
                         <a href="https://www.britishmuseum.org/collection">British Museum Digital Collection</a>
                     </li>
                 </ul>
