added abc dinamo as type resource

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                         <a href="https://pangrampangram.com/collections/fonts">Trial fonts by Pangram Pangram</a>
                     </li>
                     <li>
+                        <a href="https://abcdinamo.com/">Trial fonts by ABC Dinamo</a>
+                    </li>
+                    <li>
                         <a href="https://www.theleagueofmoveabletype.com/">Open-source font foundry</a>
                     </li>
                     <li>
