--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <p>
                 <ul>
-                    Software resources:
+                    <b>Software resources:</b>
                     <li>
                         <a href="https://edex.adobe.com/nycschools">Free Adobe Creative Cloud for students</a>
                     </li>
@@ -89,7 +89,7 @@
 
             <p>
                 <ul>
-                    Image resources:
+                    <b>Image resources:</b>
                     <li>
                         You can always make your own images using a camera, scanner, or other method!
                     </li>
@@ -135,7 +135,7 @@
 
             <p>
                 <ul>
-                    Type resources:
+                    <b>Type resources:</b>
                     <li>
                         <a href="https://fontsinuse.com/">Fonts in Use</a> (a great reference for seeing how other designers use fonts)
                     </li>
@@ -168,7 +168,7 @@
 
             <p>
                 <ul>
-                    In-class presentations:
+                    <b>In-class presentations:</b>
                     <li><a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a></li>
                     <li><a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for Posters</a></li>
                 </ul>
@@ -320,7 +320,7 @@
                                 Informal crit of everyone’s physical &rarr; digital translations.
                             </div>
                             <ul>
-                                Homework: Refine your posters, be ready to show them to our guest critic next Monday!
+                                Homework: Refine your posters — finish 1 all-type and 1 image+type poster, and also draft your last image+type poster. (Remember, 1 of these must be black & white only!) Be ready to show them to our guest critic next Monday.
                                 <li>
                                     If you’ve encountered any particular Photoshop questions while working on the posters, email me and I can address them
                                     either in a followup Photoshop workshop or in 1-on-1s.
@@ -353,11 +353,11 @@
                                 <i>Guest critic: Betty Wang</i>
                             </div>
                             <div>
-                                Guest critic presentation.
+                                Guest critic presentation, Q&A.
                             </div>
                         </div>
                         <div class="sub">
-                            Pin-up: Crit with Betty on printed digitized posters. ~7 min per student.
+                            Pin-up: Crit with Betty on printed digitized posters. ~8 min per student.
                         </div>
                         <ul>
                             Homework: Incorporating feedback from crit, finish posters.
@@ -480,12 +480,12 @@
                                 <i>Guest critic: Jisung Park</i>
                             </div>
                             <div>
-                                Guest critic presentation.
+                                Guest critic presentation, Q&A.
                             </div>
                         </div>
 
                         <div class="sub">
-                            Pin-up: Crit with Jisung on typefaces. ~7 min per student.
+                            Pin-up: Crit with Jisung on typefaces. ~8 min per student.
                         </div>
                         
                         <div class="sub">
@@ -514,6 +514,9 @@
                         </div>
                         <div class="sub">
                             Minimum 4 pages.
+                        </div>
+                        <div class="sub">
+                            Feel free to pair up with a partner to make each other’s publications!
                         </div>
                     </div>
                     <div class="row1 item">
