update with exhibition info

--- a/index.html
+++ b/index.html
@@ -499,6 +499,18 @@
             <section class="week-4">
                 <div class="grid-container">
                     <div class="row1 item">
+                        <div class="sub">
+                            Make sure you submit your final projects to Emily by midnight on July 28 so she can print them out for the exhibition in
+                            time!
+                        </div>
+                    </div>
+                    <div class="row1 item"></div>
+                </div>
+            </section>
+
+            <section class="week-4">
+                <div class="grid-container">
+                    <div class="row1 item">
                         <div class="sub cap">
                             Week 4: July 29-31
                         </div>
@@ -588,6 +600,19 @@
                         </div>
                         <div class="sub">
                             Pin-up: Final crit for entire zine.
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="week-4">
+                <div class="grid-container">
+                    <div class="row1 item">
+                        <div class="sub cap">
+                            Exhibition
+                        </div>
+                        <div class="sub">
+                            At the end of the program, there will be an exhibition of student work. It will open on Wednesday, July 31 and deinstall will happen on Thursday, August 1.
                         </div>
                     </div>
                 </div>
