update with exhibition info, typeface project specs

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                     <b>In-class presentations:</b>
                     <li><a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a></li>
                     <li><a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for Posters</a></li>
+                    <li><a href="">References for Type Design</a></li>
                 </ul>
             </p>
         </section>
@@ -224,7 +225,7 @@
                                 </div>
                             </div>
                             <div class="sub">
-                                Presentation: Introduction to Graphic Design
+                                Presentation: <a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a>
                             </div>
                             <div class="sub">
                                 Introduction to Project: <i>Poster Series</i>
@@ -241,10 +242,10 @@
                                 </div>
                             </div>
                             <div class="sub">
-                                Presentation: References for <i>Poster Series</i>
+                                Presentation: <a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for <i>Poster Series</i></a>
                             </div>
                             
-                            <ul>End of class: Introduction to <i>Type in the World</i>, a mini-project to take place over the course of the entire program
+                            <ul id="type-in-the-world">End of class: Introduction to <i>Type in the World</i>, a mini-project to take place over the course of the entire program
                                 <li>
                                     While you’re out and about, take note of interesting, attractive, ugly, or otherwise notable typography in your
                                     environment (this can be signage, packaging, stickers, etc.). If possible, bring the object into class, but if not, take
@@ -387,15 +388,25 @@
                         <div class="sub">
                             Introduction to Project & Presentation of References: <i>Custom Typeface Design</i>
                         </div>
-                        <ul>
-                            Homework: For next class, bring in some materials that interest you. Ideally, they are either flexible (can be molded into different shapes) or modular (can be stacked/arranged into different shapes). For example, playdough is flexible, while marbles are modular.
+                        <ul id="0717-hw">
+                            Homework: Over the weekend, test out some materials and/or methods that interest you, making letterforms. Ideally, your materials will be either flexible (can be molded into different shapes) or modular (can be stacked/arranged into different shapes). For example, playdough is flexible, while marbles are modular.
+                            <li>
+                                Come up with at least 2 possible directions for your typeface. Bring your chosen materials into class, and be ready to share your ideas and photos of tests you've done or (if you're making a handwritten typeface) sketches. For reference — type designers often start with the letterforms “a e f g n o” and “A E F G N O”. Be prepared to start making your typeface, scanning, digitizing etc. in class.
+                            </li>
+                            <li>
+                                If you still need to finish up your posters but can’t do that at home this weekend because of equipment / software limitations, try to get especially ahead of your typeface
+                                development so that you can have some time in class to work on your posters instead.
+                            </li>
+                            <li>
+                                If you have a computer with Adobe software and plan on making a digital-heavy typeface, bring in your computer to class on Monday.
+                            </li>
                         </ul>
                     </div>
                 </div>
             </section>
 
 
-            <section class="week-3">
+            <section class="week-3" id="custom-typeface-design">
                 <div class="grid-container">
                     <div class="row1 item">
                         <div class="sub cap">
@@ -405,8 +416,34 @@
                             <i>Custom Typeface Design</i>
                         </div>
                         <div class="sub">
-                            Make a custom typeface made out of a material not traditionally used for mark-making (e.g. paper clips, rubber bands,
-                            flowers, chewed gum, fruit peels, dried pasta – anything goes!)
+                            Make a custom typeface that emphasizes its expressive visual qualities. Make this typeface out of a material or with a method not traditionally used for mark-making (e.g. paper clips, rubber bands, flowers, chewed gum, fruit peels, dried pasta – anything goes!)
+                        </div>
+                        <div class="sub">
+                            This project is (optionally) related to the final project of our class, the <a href="#wikipedia-book"><i>Wikipedia Book Project</i></a> — so do take a look at that project's description too. If you have an idea for what Wikipedia page you'd want to choose for the book project, then try to design a typeface that is thematically tied to your Wikipedia entry. You will then use the typeface you make in your publication.
+                        </div>
+                        <ul class="sub">
+                            Some formal/conceptual approaches to consider:
+                            <li>use a particular tool or action; a brush, drawing implement, scissors, spray paint, a part of the body, a rubbing, a
+                            series of templates</li>
+                            <li>
+                                exploit the intrinsic qualities of a particular medium: paper, cloth, metal wire
+                            </li>
+                            <li>
+                                create a modular system
+                            </li>
+                            <li>
+                                create a process-based system; devise a set of instructions
+                            </li>
+                            <li>
+                                draw from a particular vernacular(s)
+                            </li>
+                            <li>
+                                customize an existing typeface, through subtraction, addition or manipulation
+                            </li>
+                        </ul>
+                        <div class="sub">
+                            Consider if you only want uppercase letters, lowercase letters, both, any special glyphs like @ % § TM Œ é, etc, or
+                            any wholly invented characters of your own.
                         </div>
                         <div class="sub">
                             Use <a href="https://www.calligraphr.com/en/">calligraphr</a> / Illustrator to generate into usable font file.
@@ -427,11 +464,14 @@
                         </div>
                         <div class="sub">
                             <div>
-                                In class: informal presentation of materials, sketching, preliminary explorations using physical materials.
+                                In class: informal presentation of materials, sketches, and preliminary explorations using physical materials.
                             </div>
                             <div>
                                 Additional materials provided for testing type: <underline>play dough, yarn, rubber bands</underline>.
                             </div>
+                        </div>
+                        <div class="sub">
+                            Work time.
                         </div>
                         <div class="sub">
                             Pin-up: Informal group discussion on progress.
@@ -456,10 +496,12 @@
                             </div>
                         </div>
                         <div class="sub">
-                            Pin-up: Group discussion on refinement of at least half the alphabet.
-                        </div>
-                        <div class="sub">
-                            If time allows: Make type specimen posters.
+                            <div>
+                                Overview of what a type specimen is.
+                            </div>
+                            <div>
+                                Make type specimen posters.
+                            </div>
                         </div>
                         <ul>
                             Homework: Finish typeface development, finalize all basic letterforms.
@@ -498,17 +540,22 @@
 
             <section class="week-4">
                 <div class="grid-container">
-                    <div class="row1 item">
+                    <div class="row1 item" id="exhibition-prep">
                         <div class="sub">
-                            Make sure you submit your final projects to Emily by midnight on July 28 so she can print them out for the exhibition in
-                            time!
+                            Make sure you email your final projects to Emily (with me cc'd) by midnight on July 28 so she can print them out for the exhibition in time!
                         </div>
+                        <ul>
+                            Specs for file submission:
+                            <li>
+                                For Photoshop files: Save them as a tiff (file → save as → choose "tiff" under format → click ok for everything after), with the following naming system: FirstnameLastname_PosterName_PosterNumber. So, an example file name would look like: "SiriLee_ButterflyPoster_1.tif"
+                            </li>
+                        </ul>
                     </div>
                     <div class="row1 item"></div>
                 </div>
             </section>
 
-            <section class="week-4">
+            <section class="week-4" id="wikipedia-book">
                 <div class="grid-container">
                     <div class="row1 item">
                         <div class="sub cap">
