--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                 </ul>
             </p>
 
-            <p>
+            <p id="presentations">
                 <ul>
                     <b>In-class presentations:</b>
                     <li><a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a></li>
                     <li><a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for Posters</a></li>
-                    <li><a href="">References for Type Design</a></li>
+                    <li><a href="https://drive.google.com/file/d/1fZSB1R7e5RLqU1VTLrapgiVx6fegUuxy/view?usp=sharing">References for Type Design</a></li>
                 </ul>
             </p>
         </section>
@@ -542,7 +542,10 @@
                 <div class="grid-container">
                     <div class="row1 item" id="exhibition-prep">
                         <div class="sub">
-                            Make sure you email your final projects to Emily (with me cc'd) by midnight on July 28 so she can print them out for the exhibition in time!
+                            At the end of the program, there will be an exhibition of student work. It will open on Wednesday, July 31 and deinstall will happen on Thursday, August 1.
+                        </div>
+                        <div class="sub">
+                            Make sure you email your final projects to Emily (with me cc'd) by <b>midnight on July 28</b> so she can print them out for the exhibition in time!
                         </div>
                         <ul>
                             Specs for file submission:
