--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         <ul id="0717-hw">
                             Homework: Over the weekend, test out some materials and/or methods that interest you, making letterforms. Ideally, your materials will be either flexible (can be molded into different shapes) or modular (can be stacked/arranged into different shapes). For example, playdough is flexible, while marbles are modular.
                             <li>
-                                Come up with at least 2 possible directions for your typeface. Bring your chosen materials into class, and be ready to share your ideas and photos of tests you've done or (if you're making a handwritten typeface) sketches. For reference — type designers often start with the letterforms “a e f g n o” and “A E F G N O”. Be prepared to start making your typeface, scanning, digitizing etc. in class.
+                                Come up with at least 2 possible directions for your typeface, and start making letterforms accordingly. (For reference — type designers often start with the letterforms “a e f g n o” and “A E F G N O”.) Take photos of the tests you've done or (if you're making a handwritten typeface) sketches of your letterforms. Bring your chosen materials into class, and be ready to share your ideas, photos, sketches etc.
                             </li>
                             <li>
                                 If you still need to finish up your posters but can’t do that at home this weekend because of equipment / software limitations, try to get especially ahead of your typeface
