--- a/index.html
+++ b/index.html
@@ -536,26 +536,27 @@
                         </div>
                     </div>
                 </div>
-            </section>
 
-            <section class="week-4">
-                <div class="grid-container">
-                    <div class="row1 item" id="exhibition-prep">
-                        <div class="sub">
-                            At the end of the program, there will be an exhibition of student work. It will open on Wednesday, July 31 and deinstall will happen on Thursday, August 1.
-                        </div>
-                        <div class="sub">
-                            Make sure you email your final projects to Emily (with me cc'd) by <b>midnight on July 28</b> so she can print them out for the exhibition in time!
-                        </div>
-                        <ul>
-                            Specs for file submission:
-                            <li>
-                                For Photoshop files: Save them as a tiff (file → save as → choose "tiff" under format → click ok for everything after), with the following naming system: FirstnameLastname_PosterName_PosterNumber. So, an example file name would look like: "SiriLee_ButterflyPoster_1.tif"
-                            </li>
-                        </ul>
+
+                <div class="row1 item inverse" id="exhibition-prep">
+                    <div class="sub">
+                        At the end of the program, there will be an exhibition of student work. It will open on Wednesday, July 31 and
+                        deinstall will happen on Thursday, August 1.
                     </div>
-                    <div class="row1 item"></div>
+                    <div class="sub">
+                        Make sure you email your final projects to Emily (with me cc'd) by <b>midnight on July 28</b> so she can print
+                        them out for the exhibition in time!
+                    </div>
+                    <ul>
+                        Specs for file submission:
+                        <li>
+                            For Photoshop files: Save them as a tiff (file → save as → choose "tiff" under format → click ok for
+                            everything after), with the following naming system: FirstnameLastname_PosterName_PosterNumber. So, an
+                            example file name would look like: "SiriLee_ButterflyPoster_1.tif"
+                        </li>
+                    </ul>
                 </div>
+                <div class="row1 item"></div>
             </section>
 
             <section class="week-4" id="wikipedia-book">
