updating to allow line breaks
<wbr>, changing quotation marks

--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
                     <ul>
                         Specs for file submission:
                         <li>
-                            For Photoshop files: Save them as a tiff (file → save as → choose "tiff" under format → click ok for
-                            everything after), with the following naming system: FirstnameLastname_PosterName_PosterNumber. So, an
-                            example file name would look like: "SiriLee_ButterflyPoster_1.tif"
+                            For Photoshop files: Save them as a tiff (file → save as → choose “tiff” under format → click ok for
+                            everything after), with the following naming system: FirstnameLastname<wbr>_PosterName<wbr>_PosterNumber. So, an
+                            example file name would look like: “SiriLee<wbr>_ButterflyPoster<wbr>_1.tif”
                         </li>
                     </ul>
                 </div>
