update for last week

--- a/index.html
+++ b/index.html
@@ -550,9 +550,15 @@
                     <ul>
                         Specs for file submission:
                         <li>
+                            General naming convention: "FirstnameLastname_ProjectName_ProjectNumber". So, an
+                            example file name would look like: “SiriLee<wbr>_ButterflyPoster<wbr>_1.tif”, "SiriLee<wbr>_ButterFont<wbr>.otf", or "SiriLee<wbr>_Typespecimen.pdf".
+                        </li>
+                        <li>
                             For Photoshop files: Save them as a tiff (file → save as → choose “tiff” under format → click ok for
-                            everything after), with the following naming system: FirstnameLastname<wbr>_PosterName<wbr>_PosterNumber. So, an
-                            example file name would look like: “SiriLee<wbr>_ButterflyPoster<wbr>_1.tif”
+                            everything after)
+                        </li>
+                        <li>
+                            For Adobe Illustrator files: Save them as a PDF (file → save a copy → choose “Adobe PDF” under format)
                         </li>
                     </ul>
                 </div>
@@ -569,17 +575,19 @@
                             <i>Wikipedia Book Project</i>
                         </div>
                         <div class="sub">
-                            Choose a wikipedia page on something you’re fascinated by and design a pamphlet using all the text and images, while
-                            thinking about how hyperlinking can be integrated as well.
+                            Choose a wikipedia page on something you’re fascinated by and design a pamphlet using all the text and images.
                         </div>
                         <div class="sub">
-                            Further considerations: footnotes/references, related pages, further reading, external links, etc.
+                            When designing your book, think about the overall structure, number of pages, chapter divisons, typography, color scheme, and imagery. 
+                        </div>
+                        <div>
+                            Further considerations: hyperlinks, footnotes/references, related pages, further reading, external links, etc.
                         </div>
                         <div class="sub">
-                            Minimum 4 pages.
+                            Minimum 8 pages.
                         </div>
                         <div class="sub">
-                            Feel free to pair up with a partner to make each other’s publications!
+                            Feel free to pair up with a partner to make a publication together!
                         </div>
                     </div>
                     <div class="row1 item">
@@ -590,16 +598,16 @@
                             <div>
                                 Introduction to Project / Presentation of References (zines, printed matter, binding methods): <i>Wikipedia Book Project</i>.
                             </div>
-                            <div>
+                            <!-- <div>
                                 Short introduction to paper type: Siri brings in paper sample books.
-                            </div>
+                            </div> -->
                         </div>
                         <div class="sub">
                             <div>
                                 Start: <i>Wikipedia Book Project</i>.
                             </div>
                             <div>
-                                Informal presentation of chosen wikipedia pages.
+                                Informal presentation of chosen wikipedia pages, initial thoughts on structure and design elements.
                             </div>
                         </div>
                         <div class="sub">
